[tool.poetry]
name = "auto-market-maker"
version = "0.1.0"
description = "This repos for learning about Auto Market Maker in Crypto Currency "
authors = ["krit pragobdee <krit.pragobdee@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
jupyter = "^1.1.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
